@@ -1,9 +1,10 @@
 Changelog
 
-$Id: Changes,v 1.91 2011-04-12 17:08:46 oops Exp $
+$Id: Changes,v 1.92 2011-04-12 18:12:31 oops Exp $
 
 * Wed, Apr 13 2011
 	- add olibc m4 script
+	- enable set null on last argument of preg_replace api
 
 * Sun, Apr 10 2011
 	- chaned build environment with automake
